--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ucdjs/ucd-fields",
-  "version": "0.0.0",
+  "version": "0.0.1-beta.1",
   "description": "All UCD file fields",
   "type": "module",
   "author": {
